# python-project-lvl1

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  Readme.md  pyproject.toml
.github/workflows/: .main.yml.swp  main.yml
brain_games/: calc.py  check_even.py  cli.py  game_engine.py  gcd.py  prime.py  progression.py
brain_games/games/: calc.py  check_even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/Games/: brain_calc.py
hyppogriff_brain_games.egg-info/: PKG-INFO  SOURCES.txt
