[tool.poetry]
name = "Hyppogriff_brain_games"
version = "0.9.0"
description = "short logic games"
authors = ["Viacheslav <hyppogriff@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_games:even"
brain-calc = "brain_games.scripts.brain_games:calc"
brain-gcd = "brain_games.scripts.brain_games:gcd"
brain-progression = "brain_games.scripts.brain_games:progression"
brain-prime = "brain_games.scripts.brain_games:prime"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

